--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -84,8 +84,13 @@
       <h2>{{ object.brand }} {{ object.model }}</h2>
       <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
       <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
+      <p><strong>Cor:</strong> {{ object.color }}</p>
       <p><strong>Placa:</strong> {{ object.plate }}</p>
       <p><strong>Preço:</strong> R$ {{ object.value }}</p>
+      {% if object.bio %}
+        <p><strong>Bio</strong> {{ object.bio }}</p>
+      {% endif %}
+      
   </div>
   {% if user.is_authenticated %}
     <div class="buttons-container">
