--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -80,7 +80,11 @@
     }
   </style>
   <div class="car-card">
-      <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
+      {% if object.photo %}
+        <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
+      {% else %}
+        <p class="no-photo">Foto não disponível</p>
+      {% endif %}
       <h2>{{ object.brand }} {{ object.model }}</h2>
       <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
       <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
@@ -90,7 +94,7 @@
       {% if object.bio %}
         <p><strong>Bio</strong> {{ object.bio }}</p>
       {% endif %}
-      
+
   </div>
   {% if user.is_authenticated %}
     <div class="buttons-container">
